--- a/lib/l10n/intl_ja_Kana.arb
+++ b/lib/l10n/intl_ja_Kana.arb
@@ -1046,5 +1046,27 @@
   "userToken": "ユーザトークン",
   "@userToken": {
     "description": "Input field title of the scrobble login form."
+  },
+  "addRemoteDevice": "リモートデバイスをアド",
+  "@addRemoteDevice": {
+    "description": "Button prompt text in the settings interface for connecting to a remote device."
+  },
+  "addRemoteDeviceSubtitle": "リモートプレーヤーをコントロールし、プレイングをマネージ。",
+  "@addRemoteDeviceSubtitle": {},
+  "hostname": "ホスト",
+  "@hostname": {
+    "description": "The host name part of an URL."
+  },
+  "port": "ポート",
+  "@port": {
+    "description": "The port part of an URL."
+  },
+  "secured": "セキュアなコネクション",
+  "@secured": {
+    "description": "If the connection is secured."
+  },
+  "addConnection": "コネクションをアド",
+  "@addConnection": {
+    "description": "The action button of the dialog."
   }
 }
