--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1207,9 +1207,19 @@
   "@allowAccess": {
     "description": "Action to grant connection permission. Align with terms like 'Approve' or 'Authorize' if better suited to target language."
   },
-  "connectionVerificationMessage": "To allow the device to connect, share the communication key fingerprint below to help verify your identity.",
+  "connectionVerificationMessage": "To allow the device {alias} ({model}) to connect, share the communication key fingerprint below to help verify your identity.",
   "@connectionVerificationMessage": {
-    "description": "Instructional text in modal for establishing trust. Emphasizes sharing security credentials (fingerprint) to authenticate connections. Use terms like 'validate' or 'authenticate' if preferred in target language."
+    "description": "Instructional text in modal for establishing trust. Emphasizes sharing security credentials (fingerprint) to authenticate connections. Use terms like 'validate' or 'authenticate' if preferred in target language.",
+    "placeholders": {
+      "alias": {
+        "type": "String",
+        "description": "User-defined device nickname"
+      },
+      "model": {
+        "type": "String",
+        "description": "Manufacturer's device model identifier"
+      }
+    }
   },
   "allowAccessSubtitle": "Grant access to control playback and download tracks from this device.",
   "@allowAccessSubtitle": {
